--- a/centralinteligencia/src/main/resources/application.properties
+++ b/centralinteligencia/src/main/resources/application.properties
@@ -5,3 +5,6 @@ springdoc.swagger-ui.path=/api-docs
 #Server config
 server.servlet.context-path=/api
 server.port=9090
+
+#Microservices
+ms.satelites=http://satelites:9191/api
