Se modifican los servicios y se agregan validaciones

--- a/centralinteligencia/src/main/resources/application.properties
+++ b/centralinteligencia/src/main/resources/application.properties
@@ -7,4 +7,5 @@ server.servlet.context-path=/api
 server.port=9090
 
 #Microservices
-ms.satelites=http://satelites:9191/api
+#ms.satelites=http://satelites:9191/api/satelites
+ms.satelites=http://localhost:9191/api/satelites
