--- a/satelites/src/main/resources/application.properties
+++ b/satelites/src/main/resources/application.properties
@@ -3,5 +3,5 @@
 springdoc.swagger-ui.path=/api-docs
 
 #Server config
-server.servlet.context-path=/api
+server.servlet.context-path=/api/satelites
 server.port=9191
