--- a/centralinteligencia/src/main/resources/application.properties
+++ b/centralinteligencia/src/main/resources/application.properties
@@ -8,4 +8,4 @@ server.port=9090
 
 #Microservices
 #ms.satelites=http://satelites:9191/api/satelites
-ms.satelites=http://localhost:9191/api/satelites
+ms.satelites=${satelites:#{'http://localhost:9191/api/satelites'}}
