--- a/centralinteligencia/src/test/resources/application.properties
+++ b/centralinteligencia/src/test/resources/application.properties
@@ -1,3 +1,6 @@
 
 #Server config
 server.servlet.context-path=/api
+
+#Microservices
+ms.satelites=${satelites:#{'http://localhost:9191/api/satelites'}}
