--- a/satelites/src/main/resources/application.properties
+++ b/satelites/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+#DDBB
+spring.datasource.name=poolTesting
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS MELI
+spring.datasource.username=sa
+spring.datasource.password=sa
+
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #Api
 springdoc.swagger-ui.path=/api-docs
