--- a/satelites/src/main/resources/application.properties
+++ b/satelites/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF
 spring.datasource.username=sa
 spring.datasource.password=sa
 
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #Api
